# flowboard

./: Makefile
agent/: pyproject.toml
agent/flowboard/: config.py
agent/flowboard/db/: models.py
agent/flowboard/routes/: llm.py  media.py  nodes.py
agent/flowboard/services/: claude_cli.py  flow_client.py  flow_sdk.py  media.py  planner.py  ws_server.py
agent/flowboard/services/llm/: gemini.py  google_vertex.py  openai.py  registry.py
agent/tests/: test_claude_cli.py  test_flow_client.py  test_llm_gemini.py  test_llm_openai_dual_mode.py  test_llm_registry.py  test_llm_routes.py  test_nodes.py  test_planner.py
docs/superpowers/specs/: 2026-05-18-resolution-selection-design.md
extension/: background.js
frontend/: vite.config.ts
frontend/src/: styles.css
frontend/src/api/: client.ts
frontend/src/canvas/: NodeCard.tsx
